--- a/frontend/src/pages/book-detail.html
+++ b/frontend/src/pages/book-detail.html
@@ -45,6 +45,14 @@
         </div>
       </section>
 
+      <!-- Rating Section (for finished books) -->
+      <section class="rating-section" id="rating-section" aria-labelledby="rating-heading" style="display: none;">
+        <h2 id="rating-heading">Rate This Book</h2>
+        <div id="rating-form-container" class="rating-form-container">
+          <!-- Rating form populated by JavaScript -->
+        </div>
+      </section>
+
       <!-- Progress Notes Section -->
       <section class="progress-notes-section" aria-labelledby="progress-notes-heading">
         <h2 id="progress-notes-heading">Reading Progress Timeline</h2>
