--- a/frontend/src/pages/dashboard.html
+++ b/frontend/src/pages/dashboard.html
@@ -46,6 +46,7 @@
               <option value="TO_READ">To Read</option>
               <option value="READING">Reading</option>
               <option value="FINISHED">Finished</option>
+              <option value="TOP_RATED">⭐ Top Rated</option>
             </select>
           </div>
 
